# storyofanerd

./: .gitignore  CMakeLists.txt  README.md
res/maps/: testmap.tmx
src/: Audio.cpp  Audio.hpp  EngineCore.cpp  EngineCore.hpp  Input.cpp  Input.hpp  Player.cpp  Player.h  common.h  errorcodes.h  eventgen.cpp  eventgen.h  filewrapper.cpp  filewrapper.h  main.cpp  test.cpp  xmlloader.cpp  xmlloader.h
