cmake_minimum_required (VERSION 2.8)

set(PROJECT_NAME storyofanerd)

set(VERSION_MAJOR 1)
set(VERSION_MINOR 0)


project(${PROJECT_NAME})
set(PROJECT_SOURCE_DIR src/)
set(PROJECT_INCLUDE_DIR src/)

include_directories("${PROJECT_INCLUDE_DIR}")

# Enable debug symbols by default
if(CMAKE_BUILD_TYPE STREQUAL "")
    set(CMAKE_BUILD_TYPE Debug)
endif()

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__STDC_CONSTANT_MACROS -Wall -std=c++11")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG -g3")
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules" ${CMAKE_MODULE_PATH})

set(EXECUTABLE_NAME ${PROJECT_NAME})
FILE(GLOB_RECURSE SRCFILES src/*.cpp)
add_executable(${EXECUTABLE_NAME} ${SRCFILES})

INCLUDE(FindPkgConfig)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2_IMAGE REQUIRED SDL2_image)
PKG_SEARCH_MODULE(TINYXML2 REQUIRED tinyxml2)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${SDL2_IMAGE_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${TINYXML2_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${TINYXML2_LIBRARIES})
